--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		
+		<dependency>
+   		<groupId>mysql</groupId>
+	   	<artifactId>mysql-connector-java</artifactId>
+		  <version>5.1.30</version>
+		  <scope>runtime</scope>
+		</dependency>
 
 		<!-- ********** Logging ********** -->
 		<dependency>
@@ -73,6 +80,20 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-entitymanager</artifactId>
+		  <version>4.3.5.Final</version>
+		  <scope>runtime</scope>
 		</dependency>
 
 		<!-- ********** Jackson ********** -->
