--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 			<version>${spring.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -166,6 +171,12 @@
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>2.1.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-faces</artifactId>
+			<version>2.3.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
